--- a/config.php.example
+++ b/config.php.example
@@ -1,8 +1,8 @@
-
+<?php
 /* Database Connection */
 
 // data source name
-$db_dsn = "sqlite:atlas.db";
+$db_dsn = "mysql:host=localhost;dbname=atlas";
 
 // database credentials
 $db_username = "username";
@@ -12,3 +12,4 @@ $db_password = "password";
 
 // needed to delete an entry
 $ping_delete_secret = "secret";
+?>
