--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.1.*",
-		"rhumsaa/uuid": "~2.7"
+		"rhumsaa/uuid": "~2.7",
+		"doctrine/dbal": "2.4.*"
 	},
 	"autoload": {
 		"classmap": [
