--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	"require": {
 		"laravel/framework": "4.1.*",
 		"rhumsaa/uuid": "~2.7",
-		"doctrine/dbal": "2.4.*"
+		"doctrine/dbal": "2.4.*",
+		"proger/feeder": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
