removed wget and supervisor

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,12 +3,15 @@ ENV APP_ROOT=/var/www/html/atlas
 ENV PHANTOM_JS=phantomjs-2.1.1-linux-x86_64
 
 RUN apt-get update \
-  && apt-get install -y apache2 composer supervisor curl php7.0 php7.0-mbstring  php7.0-curl wget \
+  && apt-get install -y apache2 composer curl php7.0 php7.0-mbstring  php7.0-curl \
      php7.0-json php7.0-soap php7.0-xml  php7.0-xsl php7.0-zip libapache2-mod-php php7.0-mcrypt php7.0-mysql \
      libfreetype6 libfreetype6-dev libfontconfig1 libfontconfig1-dev \
-  && mkdir ${APP_ROOT} \
-  && curl https://codeload.github.com/openmrs/openmrs-contrib-atlas/tar.gz/master | tar -zx -C ${APP_ROOT} --strip-components=1 \
-  && wget https://bitbucket.org/ariya/phantomjs/downloads/${PHANTOM_JS}.tar.bz2 \
+  && mkdir ${APP_ROOT}
+
+ADD https://codeload.github.com/openmrs/openmrs-contrib-atlas/tar.gz/master /tmp/atlas.tar.gz
+ADD https://bitbucket.org/ariya/phantomjs/downloads/${PHANTOM_JS}.tar.bz2 ${PHANTOM_JS}.tar.bz2
+
+RUN tar -zx -C ${APP_ROOT} -f /tmp/atlas.tar.gz --strip-components=1 \
   && tar -xvjf ${PHANTOM_JS}.tar.bz2 \
   && mv ${PHANTOM_JS} /usr/local/share/phantomjs \
   && ln -sf /usr/local/share/phantomjs/bin/phantomjs /usr/local/bin/ \
@@ -18,7 +21,6 @@ RUN apt-get update \
 
 COPY ./config/000-default.conf /etc/apache2/sites-available/000-default.conf
 COPY ./config/.env.local.php ${APP_ROOT}
-COPY ./config/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 COPY ./config/init-script.sh /usr/bin/
 
 RUN phpenmod mysqli mcrypt \
@@ -27,9 +29,10 @@ RUN phpenmod mysqli mcrypt \
   && echo "ServerName localhost" | tee /etc/apache2/conf-available/fqdn.conf \
   && a2enconf fqdn \
   && rm ${PHANTOM_JS}.tar.bz2 \
+  && rm /tmp/atlas.tar.gz \
   && rm /var/www/html/index.html \
   && rm -r ${APP_ROOT}/docker || echo "No Docker Here :D"
 
 WORKDIR ${APP_ROOT}
 EXPOSE 80
-CMD ["/usr/bin/supervisord"]
+CMD ["/usr/bin/init-script.sh"]
