Fixed issue where the build was taking .. as a relative path

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,19 +8,19 @@ RUN apt-get update \
      libfreetype6 libfreetype6-dev libfontconfig1 libfontconfig1-dev \
   && mkdir ${APP_ROOT}
 
-ADD ../ /var/www/html/atlas
+ADD ./ /var/www/html/atlas
 ADD https://bitbucket.org/ariya/phantomjs/downloads/${PHANTOM_JS}.tar.bz2 ${PHANTOM_JS}.tar.bz2
 
-RUN && tar -xvjf ${PHANTOM_JS}.tar.bz2 \
+RUN tar -xvjf ${PHANTOM_JS}.tar.bz2 \
   && mv ${PHANTOM_JS} /usr/local/share/phantomjs \
   && ln -sf /usr/local/share/phantomjs/bin/phantomjs /usr/local/bin/ \
   && chown -R www-data:www-data ${APP_ROOT}/app/storage \
   && chmod -R ug+rw ${APP_ROOT}/app/storage \
   && sed -i s/atlas-server/localhost/g ${APP_ROOT}/bootstrap/start.php
 
-COPY ./config/000-default.conf /etc/apache2/sites-available/000-default.conf
-COPY ./config/.env.local.php ${APP_ROOT}
-COPY ./config/init-script.sh /usr/bin/
+COPY ./docker/config/000-default.conf /etc/apache2/sites-available/000-default.conf
+COPY ./docker/config/.env.local.php ${APP_ROOT}
+COPY ./docker/config/init-script.sh /usr/bin/
 
 RUN phpenmod mysqli mcrypt \
   && a2enmod rewrite \
@@ -28,7 +28,6 @@ RUN phpenmod mysqli mcrypt \
   && echo "ServerName localhost" | tee /etc/apache2/conf-available/fqdn.conf \
   && a2enconf fqdn \
   && rm ${PHANTOM_JS}.tar.bz2 \
-  && rm /tmp/atlas.tar.gz \
   && rm /var/www/html/index.html \
   && rm -r ${APP_ROOT}/.git* || echo ".git Doesnot exist" \
   && rm -r ${APP_ROOT}/docker || echo "No Docker Here :D"
