--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 ---
-version: '3'
+version: '3.7'
 services:
   db:
     image: mysql:5.6
@@ -15,6 +15,8 @@ services:
       test: "exit 0"
     volumes:
       - ./db:/docker-entrypoint-initdb.d
+    networks:
+      - default
 
   atlas:
     build: ./
@@ -26,7 +28,7 @@ services:
       DB_NAME: ${DB_NAME:-atlasdb}
       DB_USERNAME: ${DB_USERNAME:-atlas}
       DB_PASSWORD: ${DB_PASSWORD:-iamatlas}
-      LDAP_URI: ${LDAP_URI:-ldap://localhost:3389}
+      LDAP_URI: ${LDAP_URI:-ldap://openldap:389}
       LDAP_USER: ${LDAP_USER:-atlas}
       LDAP_PASSWORD: ${LDAP_PASSWORD:-atlas}
       LDAP_USERS_GROUP: ${LDAP_USERS_GROUP:-atlas-users}
@@ -40,7 +42,16 @@ services:
     ports:
       - 3000:3000
     restart: always
+    networks:
+      - default
+      - ldap
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/markers/"]
 volumes:
   mysql-data:
+
+networks:
+  default:
+  ldap:
+    name: ldap-stg_default
+    external: true
