--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "extend": "^3.0.2",
     "fresh": "^0.5.2",
     "hoek": "^6.1.3",
+    "json2csv": "^4.5.1",
     "ldapjs": "^1.0.2",
     "log4js": "^4.2.0",
     "mime": "^2.4.4",
