--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "negotiator": "^0.6.2",
+    "node-schedule": "^1.3.2",
+    "nodemailer": "^6.2.1",
     "request": "^2.72.0",
     "rss": "^1.2.2",
     "serve-favicon": "^2.5.0",
